--- a/MemeThing/Views/Drawing.storyboard
+++ b/MemeThing/Views/Drawing.storyboard
@@ -26,37 +26,17 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="duD-VB-0vT">
                                         <rect key="frame" x="0.0" y="44" width="414" height="660.5"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" verticalHuggingPriority="200" translatesAutoresizingMaskIntoConstraints="NO" id="7cY-5M-71c" customClass="CanvasView" customModule="MemeThing" customModuleProvider="target">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rKZ-Hn-ghd" customClass="CanvasView" customModule="MemeThing" customModuleProvider="target">
                                                 <rect key="frame" x="20.5" y="16.5" width="373" height="627.5"/>
-                                                <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="hdu-03-sxy" customClass="CircularButton" customModule="MemeThing" customModuleProvider="target">
-                                                        <rect key="frame" x="321" y="8" width="44" height="44"/>
-                                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" secondItem="hdu-03-sxy" secondAttribute="height" multiplier="1:1" id="fjl-H2-bAB"/>
-                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="zRc-B7-dPN"/>
-                                                        </constraints>
-                                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        <state key="normal" image="arrow.counterclockwise" catalog="system"/>
-                                                        <connections>
-                                                            <action selector="undoButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LM4-Vl-Ww8"/>
-                                                        </connections>
-                                                    </button>
-                                                </subviews>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="trailing" secondItem="hdu-03-sxy" secondAttribute="trailing" constant="8" id="KEm-R5-sGf"/>
-                                                    <constraint firstItem="hdu-03-sxy" firstAttribute="top" secondItem="7cY-5M-71c" secondAttribute="top" constant="8" id="M1I-by-Gyk"/>
-                                                    <constraint firstItem="hdu-03-sxy" firstAttribute="height" secondItem="7cY-5M-71c" secondAttribute="height" multiplier="0.07" priority="999" id="V4F-BD-u9Y"/>
-                                                </constraints>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                             </view>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstItem="7cY-5M-71c" firstAttribute="width" secondItem="duD-VB-0vT" secondAttribute="width" multiplier="0.9" id="Lii-U1-O8J"/>
-                                            <constraint firstItem="7cY-5M-71c" firstAttribute="centerX" secondItem="duD-VB-0vT" secondAttribute="centerX" id="YOX-Je-n1c"/>
-                                            <constraint firstItem="7cY-5M-71c" firstAttribute="centerY" secondItem="duD-VB-0vT" secondAttribute="centerY" id="gnG-qc-Q23"/>
-                                            <constraint firstItem="7cY-5M-71c" firstAttribute="height" secondItem="duD-VB-0vT" secondAttribute="height" multiplier="0.95" id="sqW-h7-QnC"/>
+                                            <constraint firstItem="rKZ-Hn-ghd" firstAttribute="width" secondItem="duD-VB-0vT" secondAttribute="width" multiplier="0.9" id="Ged-xf-INC"/>
+                                            <constraint firstItem="rKZ-Hn-ghd" firstAttribute="height" secondItem="duD-VB-0vT" secondAttribute="height" multiplier="0.95" id="MRF-x9-0e5"/>
+                                            <constraint firstItem="rKZ-Hn-ghd" firstAttribute="centerY" secondItem="duD-VB-0vT" secondAttribute="centerY" id="e7T-gr-C9Q"/>
+                                            <constraint firstItem="rKZ-Hn-ghd" firstAttribute="centerX" secondItem="duD-VB-0vT" secondAttribute="centerX" id="yrO-3z-Z9t"/>
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Draw something funny!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zx1-JU-3wd" customClass="MemeThingLabelDark" customModule="MemeThing" customModuleProvider="target">
@@ -131,10 +111,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="canvasView" destination="7cY-5M-71c" id="LgD-Zk-BYf"/>
+                        <outlet property="canvasView" destination="rKZ-Hn-ghd" id="iaH-uE-Ftp"/>
                         <outlet property="navigationBar" destination="UWg-1Y-3dz" id="ev9-NY-xpN"/>
                         <outlet property="sendButton" destination="4zL-R8-fD7" id="9dd-RV-Gmv"/>
-                        <outlet property="undoButton" destination="hdu-03-sxy" id="0h1-Kq-7RX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -143,7 +122,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="arrow.counterclockwise" catalog="system" width="115" height="128"/>
         <image name="ellipsis" catalog="system" width="128" height="37"/>
         <namedColor name="navBarText">
             <color red="0.25490196078431371" green="0.23529411764705882" blue="0.34509803921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
