View Friends Profile Photos

--- a/MemeThing/Views/Custom Views/Custom TableView Cells/ThreeLabelsTableViewCell.xib
+++ b/MemeThing/Views/Custom Views/Custom TableView Cells/ThreeLabelsTableViewCell.xib
@@ -18,13 +18,33 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="77y-AD-EAl">
-                        <rect key="frame" x="8" y="5" width="304" height="40"/>
+                        <rect key="frame" x="8" y="7" width="304" height="57"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="IMy-6n-dg6">
-                                <rect key="frame" x="6" y="0.0" width="292" height="40"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="IMy-6n-dg6">
+                                <rect key="frame" x="6" y="0.0" width="292" height="57"/>
                                 <subviews>
+                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Yg-vO-5ZC">
+                                        <rect key="frame" x="-54" y="0.0" width="50" height="57"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QYq-x1-pUk" customClass="ProfileImage" customModule="MemeThing" customModuleProvider="target">
+                                                <rect key="frame" x="2.5" y="6" width="45" height="45"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="QYq-x1-pUk" secondAttribute="height" multiplier="1:1" id="HXy-MN-8EQ"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="5Mo-rp-fxu"/>
+                                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="QYq-x1-pUk" secondAttribute="bottom" constant="6" id="6s3-sy-ASh"/>
+                                            <constraint firstItem="QYq-x1-pUk" firstAttribute="top" relation="greaterThanOrEqual" secondItem="4Yg-vO-5ZC" secondAttribute="top" constant="6" id="Roa-FR-JIG"/>
+                                            <constraint firstItem="QYq-x1-pUk" firstAttribute="width" secondItem="4Yg-vO-5ZC" secondAttribute="width" multiplier="0.9" priority="999" id="TPL-XT-4ey"/>
+                                            <constraint firstItem="QYq-x1-pUk" firstAttribute="centerX" secondItem="4Yg-vO-5ZC" secondAttribute="centerX" id="b42-qe-8xq"/>
+                                            <constraint firstItem="QYq-x1-pUk" firstAttribute="centerY" secondItem="4Yg-vO-5ZC" secondAttribute="centerY" id="o87-dN-8Ei"/>
+                                        </constraints>
+                                    </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qQ6-Cb-luM" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="92" height="40"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="97.5" height="57"/>
                                         <constraints>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="ICO-b9-Dzh"/>
                                         </constraints>
@@ -33,13 +53,13 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vnv-pL-FQx" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
-                                        <rect key="frame" x="100" y="0.0" width="92" height="40"/>
+                                        <rect key="frame" x="105.5" y="0.0" width="97" height="57"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pAR-ik-eaB" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
-                                        <rect key="frame" x="200" y="0.0" width="92" height="40"/>
+                                        <rect key="frame" x="210.5" y="0.0" width="81.5" height="57"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -71,6 +91,8 @@
             <connections>
                 <outlet property="containerView" destination="77y-AD-EAl" id="uJE-zi-TdE"/>
                 <outlet property="firstLabel" destination="qQ6-Cb-luM" id="ybX-5D-vEY"/>
+                <outlet property="photoContainerView" destination="4Yg-vO-5ZC" id="Ozk-2C-N1I"/>
+                <outlet property="profilePhotoImageView" destination="QYq-x1-pUk" id="c73-pc-2rv"/>
                 <outlet property="secondLabel" destination="vnv-pL-FQx" id="ESn-FR-EcI"/>
                 <outlet property="thirdLabel" destination="pAR-ik-eaB" id="TSS-nz-aR1"/>
             </connections>
